@@ -21,6 +21,7 @@
 	- Prevent Orbital AI from changing attitude while launched missile is still near spacecraft.
 	- Add Smoke CM timing/interal/repetition settings.
 	- Fix the missile evasion direction using the wrong reference frame.
+	- Automatically disable precision input mode when auto-tuning (UI element doesn't switch though).
 - Weapons:
 	- Corrections to penetration and ricochet velocity changes and ricochet positions.
 	- Stop APS firing at dead missiles.
